source/sass/_main.scss
*,
*:before,
*:after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    font-size: 100%;
    text-size-adjust: none;
    text-rendering: optimizeLegibility;
    image-rendering: auto;
    background: $background-color;
}

::selection {
    color: $code-color;
    background: transparent;
}

body {
    margin: 0 auto 0;
    background: $background-color;
    color: $text-color;
    font-family: $fontstack-default;
    font-feature-settings: $font-feature;
    font-size: $font-size;
    transition: all .2s ease;

    @media handheld,
    only screen and (max-width: $breakpoint-md),
    only screen and (max-device-width: $breakpoint-md) {
        font-size: ($font-size * 1.4);
    }

    @media handheld,
    only screen and (max-width: $breakpoint-md),
    only screen and (max-device-width: $breakpoint-md) {
        font-size: ($font-size * 2.4);
    }

    @media handheld,
    only screen and (max-width: $breakpoint-xs),
    only screen and (max-device-width: $breakpoint-xs) {
        font-size: ($font-size * 3.2);
    }
}

p, h6 {
    line-height: 1.7;
    hyphens: auto;
    margin: 4vmin 0;
}

a {
    // color: $link-color;
    // text-decoration: underline;
    color: $text-color;
    text-decoration: none;
    border-bottom: 1px solid $text-color;

    &:hover {
        background-position: 0 calc(100% - 1px);
        background-size: auto 3px;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='Squiggle-svg' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.st0{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-50%);}}%3C/style%3E%3Cpath fill='none' stroke='%23000' stroke-width='1' class='st0' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
        padding-bottom: 3px;
        background-repeat-x: repeat;
        background-repeat-y: no-repeat;
        border: 0;
        text-decoration: none;
        color: $text-color;
    }
}

blockquote {
    border-left: 40px solid $code-color;
    color: #555;
    font-size: .8rem;
    padding: 0 0 0 20px;
    margin: 40px 0;

    background-position: 0 calc(100% - 2.5px);
    background-size: auto 3px;
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='Squiggle-svg' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.st0{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-50%);}}%3C/style%3E%3Cpath fill='none' stroke='%23000' stroke-width='1' class='st0' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
    padding-bottom: 3px;
    background-repeat-x: repeat;
    background-repeat-y: no-repeat;
}

em {
    font-style: italic;
}

strong {
    font-weight: bold;
}

sub {
    font-size: .85rem;
    vertical-align: sub;
}

sup {
    font-size: .85rem;
    vertical-align: super;
}

pre {
    background: #EFEFEF;
    font-family: $fontstack-monospace;
    font-size: .75rem;
    line-height: 1.4em;
    overflow: visible;
    padding: 25px;

    code {
        background: transparent;
        display: block;
        border: 0;
        padding: 0;
    }
}

del {
    text-decoration: line-through;
}

h1, h2, h3, h4, h5 {
    margin: 10vmin 0 1rem;
    color: $text-color;
    font-family: $fontstack-default;
    -webkit-font-smoothing: antialiased;
    font-weight: 400;
    line-height: 1.1;
}

h1 {
    font-size: 1.8rem;
    font-weight: bold;
}

h1.super {
    font-size: 3rem;
    font-weight: bold;
}

h2 {
    font-size: 1.4rem;
    font-weight: normal;
}

h3 {
    font-size: 1.2rem;
    font-weight: 600;
}

h4, h5 {
    opacity: .5;
    font-size: 0.94rem;
}

ul, ol {
    margin-top: 1.2rem;
    margin-bottom: 1.8rem;
    list-style: none;
    counter-reset: list;

    li {
        &:before {
            position: absolute;
            display: inline-block;
            width: 4em;
            margin: 1px 0 0 -4em;
            text-align: right;
            opacity: .6;
            pointer-events: none;
        }

        > ul, > ol  {
            margin-left: 1em;
            margin-bottom: 0;
        }
    }
}

ul.item-list {
    li {
        padding-left: 0;
        &:before {
            display: none;
        }
    }
}

time {
    font-size: 85%;
    color: #777;
}

img, video {
    display: block;
    height: auto;
    margin: 4vmin 0;
    max-width: 100%;
}

input, button, select, textarea {
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
}

button, input, select[multiple], textarea {
    background-image: none;
}

button {
    appearance: none;
    cursor: pointer;
    background: none;
    border: none;
    outline: none;
}

header {
    #title {
        h1 {
            margin: 0;
            font-size: 3rem;
        }
    }
    #description {
        p {
            font-size: 1.3rem;
            line-height: 1.4em;
        }
    }
}

main {
    padding-right: 8vw;
}

footer {
    width: 100%;
    padding: 0 0 16vmin 0;
    font-size: 0.7rem;
    text-align: center;
    position: initial;

    ul {
        li {
            display: inline;

            &:before {
                content: "";
            }

            &:after {
                padding: 0 .6vw;
                content: " | ";
                opacity: .4;
            }
            &:last-of-type {
                &:after {
                    content: none;
                }
            }

            a {
                opacity: .4;
                &:hover {
                    opacity: 1;
                }
            }
        }
    }
}

@media handheld,
only screen and (max-width: $breakpoint-md),
only screen and (max-width: $breakpoint-md) {
    .content {
        article {
            p, ul, figure {
                font-size: 1rem;
            }
        }
    }
}

@media handheld,
only screen and (max-width: $breakpoint-sm),
only screen and (max-width: $breakpoint-sm) {
    .content {
        article {
            p, ul, figure {
                font-size: 0.86rem;
            }
        }
        #description p {
            font-size: 1.1rem;
        }
        #title h1 {
            font-size: 2rem;
        }
        #description p {
            font-size: 1rem;
        }
    }
}

